--- a/css-mysite/index.html
+++ b/css-mysite/index.html
@@ -48,9 +48,9 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/amal-k-george-2542a813a">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/amalkgeorge97">Twitter</a>
+    <a class="footer-link" href="https://github.com/amalkgeorge-wb">GitHub</a>
     <p class="copyright">© 2018 Amal K George.</p>
   </div>
 
